--- a/src/app/management-table/management-table.component.html
+++ b/src/app/management-table/management-table.component.html
@@ -1,3 +1,20 @@
-<p>
-  management-table works!
-</p>
+<mat-table [dataSource]="locations" class="mat-elevation-z8">
+  <ng-container matColumnDef="name">
+    <mat-header-cell *matHeaderCellDef>עיר</mat-header-cell>
+    <mat-cell *matCellDef="let location">{{location.name}}</mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="coords">
+    <mat-header-cell *matHeaderCellDef>נקודות ציון</mat-header-cell>
+    <mat-cell *matCellDef="let location">{{location.coords}}</mat-cell>
+  </ng-container>
+  <ng-container *ngFor="let aircraft of aircrafts" matColumnDef="time-{{aircraft.id}}">
+    <mat-header-cell *matHeaderCellDef>{{aircraft.name}}</mat-header-cell>
+    <mat-cell *matCellDef="let location">{{<input-editor [placeholder]="getTimeOfAircraftOnPoint(aircraft, location)"></input-editor></mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="add-aircraft">
+    <mat-header-cell *matHeaderCellDef (click)="addColumn()">+</mat-header-cell>
+    <mat-cell *matCellDef></mat-cell>
+  </ng-container>
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row >
+  <mat-row *matRowDef="let location; columns: displayedColumns;"></mat-row>
+</mat-table>
