--- a/src/app/data-forms/data-forms.html
+++ b/src/app/data-forms/data-forms.html
@@ -1,3 +1,5 @@
 <p>WAIT FOR IT</p>
 
-<button mat-raised-button (click)="openDialog()">Pick one</button>
+<button mat-raised-button (click)="openDialog('aircraft')">Aircraft</button><br>
+<button mat-raised-button (click)="openDialog('aircrafttype')">Aircraft Type</button><br>
+<button mat-raised-button (click)="openDialog('point')">Point</button>
