--- a/src/app/data-forms/data-forms-point/data-forms-point.html
+++ b/src/app/data-forms/data-forms-point/data-forms-point.html
@@ -1,25 +1,21 @@
-<h1 mat-dialog-title>Enter new Point</h1>
-<div mat-dialog-content>
-  <p>Point ID:</p>
+<h1 mat-dialog-title dir="rtl">הכנס עיר חדשה</h1>
+<div mat-dialog-content dir="rtl">
+  <p>שם:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="pointInput.pointId">
+    <input matInput [(ngModel)]="pointInput.pointName">
   </mat-form-field>
-  <p>Point Latitude:</p>
+  <p>מיקום על קו האורך:</p>
   <mat-form-field>
     <input matInput [(ngModel)]="pointInput.E">
   </mat-form-field>
-  <p>Point Longitude:</p>
+  <p>מיקום על קו הרוחב:</p>
   <mat-form-field>
     <input matInput [(ngModel)]="pointInput.N">
   </mat-form-field>
-  <p>Point Name:</p>
-  <mat-form-field>
-    <input matInput [(ngModel)]="pointInput.Name">
-  </mat-form-field>
-  <mat-checkbox [(ngModel)]="pointInput.hidden">Hide Point</mat-checkbox>
-  <mat-checkbox [(ngModel)]="pointInput.hideAircrafts">Hide Aircrafts</mat-checkbox>
+  <mat-checkbox [(ngModel)]="pointInput.hidden">הסתר עיר</mat-checkbox>
+  <mat-checkbox [(ngModel)]="pointInput.hideAircrafts">הסתר מטוסים מעל העיר</mat-checkbox>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button (click)="onNoClick()">Ok</button>
+  <button mat-button (click)="onNoClick()">הוסף</button>
+  <button mat-button (click)="onNoClick()">בטל</button>
 </div>
