--- a/src/app/data-forms/data-forms-aircrafttype/data-forms-aircrafttype.html
+++ b/src/app/data-forms/data-forms-aircrafttype/data-forms-aircrafttype.html
@@ -8,7 +8,7 @@
   <mat-form-field>
     <input matInput [(ngModel)]="aircraftTypeInput.category">
   </mat-form-field>
-  <p>טיפוס:</p>
+  <p>קבוצה:</p>
   <mat-form-field>
     <input matInput [(ngModel)]="aircraftTypeInput.type">
   </mat-form-field>
