Forms with the ability to update existing data

--- a/src/app/data-forms/data-forms-aircrafttype/data-forms-aircrafttype.html
+++ b/src/app/data-forms/data-forms-aircrafttype/data-forms-aircrafttype.html
@@ -2,55 +2,51 @@
 <div mat-dialog-content dir="rtl">
   <p>שם:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.name">
+    <input matInput [(ngModel)]="aircraftTypeData.name">
   </mat-form-field>
   <p>קטגוריה:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.category">
+    <input matInput [(ngModel)]="aircraftTypeData.category">
   </mat-form-field>
   <p>קבוצה:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.type">
+    <input matInput [(ngModel)]="aircraftTypeData.type">
   </mat-form-field>
   <p>אייקון:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.icon">
-  </mat-form-field>
-  <p>מדינה:</p>
-  <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.country">
+    <input matInput [(ngModel)]="aircraftTypeData.icon">
   </mat-form-field>
   <p>תמונה:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.image">
+    <input matInput [(ngModel)]="aircraftTypeData.image">
   </mat-form-field>
   <p>סיווג:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.classification">
+    <input matInput [(ngModel)]="aircraftTypeData.classification">
   </mat-form-field>
   <p>תיאור:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.description">
+    <input matInput [(ngModel)]="aircraftTypeData.description">
   </mat-form-field>
   <p>מקום יצור:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.manufactured">
+    <input matInput [(ngModel)]="aircraftTypeData.manufactured">
   </mat-form-field>
   <p>מימדים:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.dimensions">
+    <input matInput [(ngModel)]="aircraftTypeData.dimensions">
   </mat-form-field>
   <p>תפקוד:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.performance">
+    <input matInput [(ngModel)]="aircraftTypeData.performance">
   </mat-form-field>
   <p>משקל:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.weight">
+    <input matInput [(ngModel)]="aircraftTypeData.weight">
   </mat-form-field>
   <p>מנוע:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="aircraftTypeInput.engine">
+    <input matInput [(ngModel)]="aircraftTypeData.engine">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
