More build stuff

--- a/src/app/data-forms/data-forms-point/data-forms-point.html
+++ b/src/app/data-forms/data-forms-point/data-forms-point.html
@@ -14,7 +14,7 @@
   </mat-form-field>
   <p>Point Name:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="pointInput.Name">
+    <input matInput [(ngModel)]="pointInput.pointName">
   </mat-form-field>
   <mat-checkbox [(ngModel)]="pointInput.hidden">Hide Point</mat-checkbox>
   <mat-checkbox [(ngModel)]="pointInput.hideAircrafts">Hide Aircrafts</mat-checkbox>
