Added the form for updating the metadata, for now it receives an empty MetaData object. I also changed its properties to public so I can use them in the form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
         <button (click)="openDialog('point')" mat-menu-item>
           <span>הוסף עיר חדשה</span>
         </button>
+        <button (click)="openDialog('metadata')" mat-menu-item>
+            <span>ערוך את פרטי המטס</span>
+          </button>
         <button mat-menu-item>
           <span>שמור טבלה</span>
         </button>
