Fixed minor bugs

--- a/src/app/data-forms/data-forms-point/data-forms-point.html
+++ b/src/app/data-forms/data-forms-point/data-forms-point.html
@@ -18,7 +18,7 @@
   </mat-form-field>
   <p>תת מיקום:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="pointInput.pointName">
+    <input matInput [(ngModel)]="pointData.pointName">
   </mat-form-field>
   <p>זמני פעילות:</p>
   <mat-form-field>
