Revert "Feature/toolbar"

--- a/src/app/data-forms/data-forms-point/data-forms-point.html
+++ b/src/app/data-forms/data-forms-point/data-forms-point.html
@@ -32,6 +32,6 @@
   <mat-checkbox [(ngModel)]="pointData.hideAircrafts">הסתר מטוסים מעל העיר</mat-checkbox>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onOkClick()">הוסף</button>
+  <button mat-button (click)="onNoClick()">הוסף</button>
   <button mat-button (click)="onNoClick()">בטל</button>
 </div>
