--- a/src/app/data-forms/data-forms-aircraft/data-forms-aircraft.html
+++ b/src/app/data-forms/data-forms-aircraft/data-forms-aircraft.html
@@ -1,14 +1,13 @@
 <h1 mat-dialog-title dir="rtl">הוסף כלי טיס חדש</h1>
 <div mat-dialog-content dir="rtl">
-  <p>סוג כלי הטיס החדש:</p>
   <mat-form-field>
-  <mat-label *ngIf="aircraftData.aircraftTypeId == 0">לחץ כדי לבחור</mat-label>
-  <mat-label *ngIf="aircraftData.aircraftTypeId != 0">
-    {{this.aircraftTypes[aircraftData.aircraftTypeId - 1].name}}
-  </mat-label>
-  <mat-select>
-      <mat-option *ngFor="let aircraftType of this.aircraftTypesSorted" 
-      (click)="setAircraftTypeInput(aircraftType.name)" [value] = "aircraftType.name">
+    <!--<mat-label *ngIf="aircraftData.aircraftTypeId == 0">לחץ כדי לבחור</mat-label>-->
+    <!--<mat-label *ngIf="aircraftData.aircraftTypeId != 0">-->
+      <!--{{this.aircraftTypes[aircraftData.aircraftTypeId - 1].name}}-->
+    <!--</mat-label>-->
+    <mat-select placeholder="סוג המטוס" [(ngModel)]="currentType">
+      <mat-option *ngFor="let aircraftType of aircraftTypes"
+                  [value]="aircraftType">
         {{aircraftType.name}}
       </mat-option>
     </mat-select>
