--- a/src/app/data-forms/data-forms-metadata/data-forms-metadata.html
+++ b/src/app/data-forms/data-forms-metadata/data-forms-metadata.html
@@ -1,20 +1,16 @@
 <h1 mat-dialog-title dir="rtl">הכנס עיר חדשה</h1>
 <div mat-dialog-content dir="rtl">
-  <p>תאריך התחלה:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="metadataData._startDate">
+    <input matInput placeholder="תאריך התחלה" [(ngModel)]="metadataData._startDate">
   </mat-form-field>
-  <p>זמן התחלה מתוכנן:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="metadataData._plannedStartTime">
+    <input matInput placeholder="זמן התחלה מתוכנן" [(ngModel)]="metadataData._plannedStartTime">
   </mat-form-field>
-  <p>זמן התחלה בפועל:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="metadataData._actualStartTime">
+    <input matInput placeholder="זמן התחלה בפועל" [(ngModel)]="metadataData._actualStartTime">
   </mat-form-field>
-  <p>זמן סיום:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="metadataData._plannedEndTime">
+    <input matInput placeholder="זמן סיום" [(ngModel)]="metadataData._plannedEndTime">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
