Fixed forms completely, lots of work on table and editting point

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
       <button (click)="openDialog('metadata')" mat-menu-item>
         <span>ערוך את פרטי המטס</span>
       </button>
-      <button mat-menu-item>
+      <button (click)="saveClicked()" mat-menu-item>
         <span>שמור טבלה</span>
       </button>
     </mat-menu>
