--- a/src/app/management-table/management-table.component.less
+++ b/src/app/management-table/management-table.component.less
@@ -57,3 +57,7 @@ th.mat-column-position, td.mat-column-position {
 /deep/ .mat-sort-header-container {
   justify-content: center !important;
 }
+
+.updated-time {
+  color: dodgerblue;
+}
