--- a/src/app/data-forms/data-forms-metadata/data-forms-metadata.html
+++ b/src/app/data-forms/data-forms-metadata/data-forms-metadata.html
@@ -1,16 +1,16 @@
 <h1 mat-dialog-title dir="rtl">הכנס עיר חדשה</h1>
 <div mat-dialog-content dir="rtl">
   <mat-form-field>
-    <input matInput placeholder="תאריך התחלה" [(ngModel)]="metadataData._startDate">
+    <input matInput placeholder="תאריך התחלה" [(ngModel)]="metadataData.startDate">
   </mat-form-field>
   <mat-form-field>
-    <input matInput placeholder="זמן התחלה מתוכנן" [(ngModel)]="metadataData._plannedStartTime">
+    <input matInput placeholder="זמן התחלה מתוכנן" [(ngModel)]="metadataData.plannedStartTime">
   </mat-form-field>
   <mat-form-field>
-    <input matInput placeholder="זמן התחלה בפועל" [(ngModel)]="metadataData._actualStartTime">
+    <input matInput placeholder="זמן התחלה בפועל" [(ngModel)]="metadataData.actualStartTime">
   </mat-form-field>
   <mat-form-field>
-    <input matInput placeholder="זמן סיום" [(ngModel)]="metadataData._plannedEndTime">
+    <input matInput placeholder="זמן סיום" [(ngModel)]="metadataData.plannedEndTime">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
