--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,5 +26,5 @@
     </mat-menu>
     <span style="margin: 0 auto;">טבלת מטסים</span>
   </mat-toolbar>
-  <app-management-table style="top: 70px; position: absolute;"></app-management-table>
+  <app-management-table style="top: 70px; position: absolute;" [savePerformed]="subject"></app-management-table>
 </div>
