--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
       <button (click)="openDialog('aircrafttype')" mat-menu-item>
         <span>הוסף סוג כלי טיס חדש</span>
       </button>
+      <button (click)="openDialog('aircrafttypeupdate')" mat-menu-item>
+        <span>עדכן סוג כלי טיס</span>
+      </button>
       <button (click)="openDialog('point')" mat-menu-item>
         <span>הוסף עיר חדשה</span>
       </button>
