--- a/src/app/management-table/management-table.component.html
+++ b/src/app/management-table/management-table.component.html
@@ -21,24 +21,42 @@
         <img src="/assets/Delete.png" style="width: 15px; height: 15px; cursor: pointer;" (click)="deletePoint(model)">
       </td>
     </ng-container>
-    <ng-container *ngFor="let aircraft of aircraftArray; trackBy: trackByIndex" matColumnDef="time-{{aircraft.aircraftId}}">
-      <th mat-header-cell *matHeaderCellDef >
-        <img src="/assets/edit.png" style="width: 15px; height: 15px; cursor: pointer;" (click)="editAircraft(aircraft)">
-        <img src="/assets/Delete.png" style="width: 15px; height: 15px; cursor: pointer;" (click)="deleteAircraft(aircraft)">
+    <ng-container *ngFor="let aircraft of aircraftArray; trackBy: trackByIndex"
+                  matColumnDef="time-{{aircraft.aircraftId}}">
+      <th mat-header-cell *matHeaderCellDef>
+        <img src="/assets/edit.png" style="width: 15px; height: 15px; cursor: pointer;"
+             (click)="editAircraft(aircraft)">
+        <img src="/assets/Delete.png" style="width: 15px; height: 15px; cursor: pointer;"
+             (click)="deleteAircraft(aircraft)">
         <label mat-sort-header="">{{getAircraftTypeName(aircraft) + ' ' + aircraft.aircraftId}}</label>
       </th>
       <td mat-cell *matCellDef="let model">
-        <label [class.updated-time]="isAircraftPointUpdated(aircraft, model.point)"
-          (keydown)="labelKeyDown($event, aircraft, model.point)" #lbl contenteditable="true"
-               (focus)="labelClicked(lbl, aircraft, model.point)" (click)="labelClicked(lbl)" (blur)="labelBlurred(lbl, aircraft, model.point)"
-               [contenteditableModel]="getTimeOfAircraftOnPoint(aircraft, model.point)"
-               (contenteditableModelChange)="aircraftTimeOnPointChanged(aircraft, model.point, $event)">
-        </label>
+        <div style="display: flex;flex-direction: column; width: 100px;">
+          <label [class.updated-time]="isAircraftPointUpdated(aircraft, model.point)"
+                 (keydown)="labelKeyDown($event, aircraft, model.point)" #lbl contenteditable="true"
+                 (focus)="labelClicked(lbl, aircraft, model.point)" (click)="labelClicked(lbl)"
+                 (blur)="labelBlurred(lbl, aircraft, model.point)"
+                 [contenteditableModel]="getTimeOfAircraftOnPoint(aircraft, model.point)"
+                 (contenteditableModelChange)="aircraftTimeOnPointChanged(aircraft, model.point, $event)">
+          </label>
+          <mat-select  placeholder="מיוחד" [ngModel]="getAircraftPointSpecial(aircraft, model.point)" (ngModelChange)="specialChanged($event, aircraft, model.point)" *ngIf="getTimeOfAircraftOnPoint(aircraft, model.point) !='--'">
+            <mat-option [value]="cat.category" *ngFor="let cat of categs">{{cat.category}}</mat-option>
+            <mat-option [value]="undefined"></mat-option>
+          </mat-select>
+          <div style="width: 85px;" *ngIf="getAircraftPointSpecial(aircraft, model.point) === 'חזרות'">
+            <!--<input style="width: 85px;" placeholder="dd/mm/yy">-->
+            <mat-form-field style="width: 85px;">
+              <input matInput [matDatepicker]="picker" placeholder="תאריך" [value]="getDateOfAircraftOnPoint(aircraft, model.point)" (dateChange)="aircraftDateChanged($event, aircraft, model.point)">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+          </div>
+        </div>
       </td>
     </ng-container>
     <!--<ng-container matColumnDef="add-aircraft">-->
-      <!--<th mat-header-cell *matHeaderCellDef (click)="addColumn()">+</th>-->
-      <!--<td mat-cell *matCellDef></td>-->
+    <!--<th mat-header-cell *matHeaderCellDef (click)="addColumn()">+</th>-->
+    <!--<td mat-cell *matCellDef></td>-->
     <!--</ng-container>-->
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let model; columns: displayedColumns;"></tr>
