--- a/src/app/data-forms/data-forms-point/data-forms-point.html
+++ b/src/app/data-forms/data-forms-point/data-forms-point.html
@@ -18,6 +18,9 @@
   <mat-form-field>
     <input matInput placeholder="קישור לWaze" [(ngModel)]="pointData.wazeLink">
   </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="תערוכות" [(ngModel)]="pointData.exhibitions">
+  </mat-form-field>
   <mat-checkbox [(ngModel)]="pointData.hidden">הסתר עיר</mat-checkbox>
   <mat-checkbox [(ngModel)]="pointData.hideAircrafts">הסתר מטוסים מעל העיר</mat-checkbox>
 </div>
