--- a/src/app/data-forms/data-forms-aircraft/data-forms-aircraft.html
+++ b/src/app/data-forms/data-forms-aircraft/data-forms-aircraft.html
@@ -17,7 +17,9 @@
       <mat-option [value]="cat.category" *ngFor="let cat of categs">{{cat.category}}</mat-option>
       <mat-option [value]="''"></mat-option>
     </mat-select>
-  </mat-form-field>
+  </mat-form-field><br>
+    <mat-checkbox [(ngModel)]="aircraftData.hide">הסתר</mat-checkbox>
+
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onOkClick()">הוסף</button>
