--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
       <button (click)="openDialog('metadata')" mat-menu-item>
         <span>ערוך את פרטי המטס</span>
       </button>
+      <button (click)="openDialog('notification')" mat-menu-item>
+        <span>שלח התראה</span>
+      </button>
       <button (click)="saveClicked()" mat-menu-item>
         <span>שמור טבלה</span>
       </button>
