Lots of routes work done

--- a/src/app/routes-management/routes-management.component.less
+++ b/src/app/routes-management/routes-management.component.less
@@ -50,3 +50,20 @@
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.route-title {
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.add-point {
+  cursor: pointer;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.add-point:hover {
+  text-decoration: underline;
+}
