--- a/src/app/routes-management/route-point-selector/route-point-selector.component.html
+++ b/src/app/routes-management/route-point-selector/route-point-selector.component.html
@@ -1,6 +1,8 @@
+<img  style="width: 15px; height: 15px; cursor: pointer;" src="/assets/Delete.png" (click)="pointRemoved.emit()">
 <mat-form-field>
   <mat-label>ישוב</mat-label>
-  <select matNativeControl [formControl]="currentPointControl">
-    <option *ngFor="let point of availablePoints" [value]="point.pointId">{{point.pointName}}</option>
-  </select>
+  <mat-select [formControl]="currentPointControl" (valueChange)="currentPointChanged($event)">
+    <mat-option *ngFor="let point of availablePoints" [value]="point">{{point.pointName}}</mat-option>
+  </mat-select>
 </mat-form-field>
+<mat-checkbox [checked]="this.currentPoint?.hidden" (change)="pointVisibilityChange.emit($event.checked)">הסתר נקודה</mat-checkbox>
