--- a/src/app/routes-management/routes-management.component.html
+++ b/src/app/routes-management/routes-management.component.html
@@ -1,10 +1,42 @@
 <div class="routes-container">
   <div *ngFor="let route of routes; index as routeIndex">
+    <div class="route-title">
+      <span (keydown)="routeNameEnter($event, routeIndex)" contenteditable="true" [(contenteditableModel)]="route.name">
+        {{route.name}}
+      </span>
+      <div>
+        <label>צבע מסלול:</label>
+        <div [(colorPicker)]="route.color" style="width: 10px; height: 10px; border: 1px solid black; display: inline-block;"
+             [style.background-color]="route.color">
+        </div>
+      </div>
+      <div>
+        <label>צבע טקסט עיקרי:</label>
+        <span [(colorPicker)]="route.primaryTextColor" style="width: 10px; height: 10px;  border: 1px solid black; display: inline-block;"
+             [style.background-color]="route.primaryTextColor">
+        </span>
+      </div>
+      <div>
+        <label>צבע טקסט משני:</label>
+        <span [(colorPicker)]="route.secondaryTextColor" style="width: 10px; height: 10px;  border: 1px solid black; display: inline-block;"
+             [style.background-color]="route.secondaryTextColor">
+        </span>
+      </div>
+      <img src="/assets/Delete.png" (click)="removeRoute(routeIndex)"
+           style="position: absolute; top: 5px; left: 15px; width: 15px; height: 15px; cursor: pointer;">
+    </div>
     <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event, routeIndex)">
       <div class="example-box" *ngFor="let point of route.points; index as pointInRouteIndex" cdkDrag>
-        <route-point-selector [currentPoint]="point" (currentPointChange)="changePointOfRoute($event, routeIndex, pointInRouteIndex)"
-                              [availablePoints]="getAvailablePointsForRoute(route)"></route-point-selector>
+        <route-point-selector [currentPointId]="point.pointId"
+                              (currentPointChange)="changePointOfRoute($event, routeIndex, pointInRouteIndex)"
+                              (pointRemoved)="removePointOfRoute(routeIndex, pointInRouteIndex)"
+                              (pointVisibilityChange)="changeVisibilityOfPointInRoute($event, routeIndex, pointInRouteIndex)"
+                              [availablePoints]="this.points"></route-point-selector>
       </div>
     </div>
+    <div class="add-point" (click)="addPointToRoute(routeIndex)">
+      הוסף נקודה +
+    </div>
   </div>
+  <div class="add-point" (click)="addRoute()">הוסף נתיב +</div>
 </div>
