--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,12 +29,15 @@
       <button (click)="saveClicked()" mat-menu-item>
         <span>שמור טבלה</span>
       </button>
+      <button (click)="saveRoutesClicked()" mat-menu-item>
+        <span>שמור נתיבים</span>
+      </button>
     </mat-menu>
     <span style="margin: 0 auto;">טבלת מטסים</span>
   </mat-toolbar>
   <mat-tab-group>
     <mat-tab label="ניהול מטוסים">
-<!--      <app-management-table [savePerformed]="subject"></app-management-table>-->
+      <!--      <app-management-table [savePerformed]="subject"></app-management-table>-->
     </mat-tab>
     <mat-tab label="ניהול נתיבים">
       <routes-management></routes-management>
