--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
   </mat-toolbar>
   <mat-tab-group>
     <mat-tab label="ניהול מטוסים">
-      <!--      <app-management-table [savePerformed]="subject"></app-management-table>-->
+            <app-management-table [savePerformed]="subject"></app-management-table>
     </mat-tab>
     <mat-tab label="ניהול נתיבים">
       <routes-management></routes-management>
