Added point type

--- a/src/app/data-forms/data-forms-point/data-forms-point.html
+++ b/src/app/data-forms/data-forms-point/data-forms-point.html
@@ -21,6 +21,11 @@
   <mat-form-field>
     <input matInput placeholder="תערוכות" [(ngModel)]="pointData.exhibitions">
   </mat-form-field>
+  <mat-form-field>
+    <mat-select placeholder="סוג" [(ngModel)]="pointData.type" [value]="types[0]">
+      <mat-option [value]="type.value" *ngFor="let type of types">{{type.displayName}}</mat-option>
+    </mat-select>
+  </mat-form-field>
   <mat-checkbox [(ngModel)]="pointData.hidden">הסתר עיר</mat-checkbox>
   <mat-checkbox [(ngModel)]="pointData.hideAircrafts">הסתר מטוסים מעל העיר</mat-checkbox>
 </div>
