--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,22 @@
 <!--<app-data-forms></app-data-forms>-->
 <!--</div>-->
 
+<style>
+  .loader {
+    animation: loadingUp .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+  @keyframes loadingUp {
+    from { transform: translateY(50px); }
+  }
+</style>
+
+<div class="loader" style="width: 100vw; height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; position: absolute; background-color: rgba(255, 255, 255, 0.486); backdrop-filter: blur(10px); z-index: 9999;" *ngIf="!readyState">
+  <img src="../assets/headerLogo.svg" height="100px">
+  
+  <br>
+  רק רגע
+</div>
+
 <div class="container">
   <mat-toolbar dir="rtl">
     <button mat-icon-button [matMenuTriggerFor]="menu">
